[package]
name = "modality-ros-hook"
version = "0.1.2"
edition = "2021"
authors = [
    "Russell Mull <russell@auxon.io>",
    "Jon Lamb <jon@auxon.io>",
]
description = "An LD_PRELOAD Modality integration for the rmw (ROS middleware abstraction) interface layer"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-ros2"

[dependencies]
redhook = "2.0"
cstr = "0.2.11"
lazy_static = "1.4"
rpds = "0.12"
archery = "0.4"
arc-swap = "1.6"
widestring = "1"
tokio = { version = "1", features = ["rt", "sync"] }
fxhash = "0.2"
itertools = "0.10"

modality-api = "0.1"
modality-ingest-client = "0.2"

[lib]
name = "modality_ros_hook"
crate_type = ["dylib"]
